--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -14,6 +14,7 @@ koinComposeViewModel = "1.2.0-Beta4"
 retrofit = "2.9.0"
 gson = "2.10.1"
 coil = "2.3.0"
+navigation_version = "2.7.7"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -38,6 +39,7 @@ gson = { module = "com.google.code.gson:gson", version.ref = "gson" }
 retrofit-converter-gson = { module = "com.squareup.retrofit2:converter-gson", version.ref = "retrofit" }
 coil = { module = "io.coil-kt:coil", version.ref = "coil" }
 coil-compose = { module = "io.coil-kt:coil-compose", version.ref = "coil" }
+navigation_compose = {module = "androidx.navigation:navigation-compose",version.ref = "navigation_version"}
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
