--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -15,6 +15,8 @@ retrofit = "2.9.0"
 gson = "2.10.1"
 coil = "2.3.0"
 navigation_version = "2.7.7"
+okhttp = "4.10.0"
+logging-interceptor = "4.10.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -40,6 +42,8 @@ retrofit-converter-gson = { module = "com.squareup.retrofit2:converter-gson", ve
 coil = { module = "io.coil-kt:coil", version.ref = "coil" }
 coil-compose = { module = "io.coil-kt:coil-compose", version.ref = "coil" }
 navigation_compose = {module = "androidx.navigation:navigation-compose",version.ref = "navigation_version"}
+okhttp = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp" }
+logging-interceptor = { module = "com.squareup.okhttp3:logging-interceptor", version.ref = "logging-interceptor" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
